# libsignal-client

./: Cargo.toml  package.json
rust/bridge/ffi/: Cargo.toml
rust/bridge/jni/: Cargo.toml
rust/bridge/node/: Cargo.toml
rust/bridge/shared/: Cargo.toml
rust/crypto/: Cargo.toml
rust/protocol/: Cargo.toml  build.rs
rust/protocol/benches/: sealed_sender.rs
rust/protocol/src/: address.rs  kem.rs  lib.rs
rust/protocol/src/state/: session.rs
rust/zkcredential/: Cargo.toml
rust/zkcredential/src/: credentials.rs  issuance.rs  lib.rs  presentation.rs
rust/zkgroup/: Cargo.toml
rust/zkgroup/src/: lib.rs
rust/zkgroup/src/api/groups/: group_params.rs
rust/zkgroup/src/common/: array_utils.rs
